global-store/k8s/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: global-store-cluster-ip-service
  labels:
    app: global-store-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3008
      targetPort: 3008
  selector:
    name: global-store-deployment
