global-store/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: global-store.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: global-store-cluster-ip-service
                port:
                  number: 3008
